--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "test-bridge": "./index.js"
+    "test-bridge": "./cli.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "log4js": "^0.6.31",
+    "merge": "^1.2.0",
     "request": "^2.69.0"
   },
   "devDependencies": {
