--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/sebastianhaas/test-bridge#readme",
   "dependencies": {
+    "async": "^1.5.2",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "log4js": "^0.6.31",
